[package]
name = "http_fetch"
description = "Fetch web pages easily (supports compression and non UTF-8 encodings)"
version = "0.3.1"
repository = "https://github.com/tp/http_fetch-rs"
authors = ["Timm Preetz <timm@preetz.us>"]
license = "MIT/Apache-2.0"

[dependencies]
hyper = "0.9.10"
flate2 = "0.2"
encoding = "0.2.32"
