[package]
name = "fetch"
description = "Fetch web pages easily (supports compression and non UTF-8 encodings)"
readme = "README.md"
version = "0.7.2"
repository = "https://github.com/tp/fetch-rs"
documentation = "https://docs.rs/fetch"
authors = ["Timm Preetz <timm@preetz.us>"]
license = "MIT/Apache-2.0"

[dependencies]
hyper = "0.9.10"
flate2 = "0.2"
encoding = "0.2.32"
